--- a/readme
+++ b/readme
@@ -13,5 +13,9 @@
       将源码贴出来，希望得到交流，研一时写的代码，代码风格和函数抽象层次确实让现在得我不敢苟同，将当时的代码贴出来我
       付出了极大地勇气来面对过去的自己。
       
+      目前review了下自己的代码，有几个不满意的地方，1 代码风格当时还不稳定 2 接口设计的不是很合理，我会加上类似于tcp的三次
+      握手类似的接口。 3 阻塞做的不好，起码加个计时器。 4 加上调试的开关，如果用户需要调试，可以打开开关写日志核对读写信息。
+      
+      
       参考书籍为stevens大神的unp1，unp2。
 */
